--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,36 @@
 @media (max-width: 431px)  {
+  #root{
+    padding: 0;
+    margin: 0;
+  }
+  body{
+    padding: 0;
+    margin: 0;
+  }
   /* navbar*/
   .navbar {
-    position: fixed;
+    position: absolute;
     top: 0;
-    width: 100%;
+    width: 100vh;
+    background: white;
     z-index: 1;
   }
   
   .navbar-container {
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    max-width: 90vw;
   }
   
   .navbar-logo {
     height: 50px;
+    border: 3px solid red;
   }
-  
+.navbar-search{
+  display: inline-block;
+  margin-left: ;
+}
   .navbar-search input {
     padding: 0.5rem;
   }
@@ -26,5 +40,47 @@
     padding: 0.5rem;
   }
   /* fin del navbar */
-  
+
+  /* banner */
+  .bannerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+    max-width: 100%;
+  }
+  .banner{
+      height: 80%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      position: relative;
+  }
+  .bannerImage{
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .imageIndicatorContainer{
+    position: absolute;
+    bottom: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .prevBtn{
+    position: absolute;
+    left:5%;
+    bottom:5%;
+  }
+
+  .nextBtn{
+    position: absolute;
+    right:5%;
+    bottom:5%;
+  }
 }
